eureka的服务注册与发现

--- a/docs/spring-cloud/服务注册中心.md
+++ b/docs/spring-cloud/服务注册中心.md
@@ -353,9 +353,17 @@ public class EurekaProviderController {
 
 > 同样的道理，搭建我们的服务的消费者
 
-> 待续
+注册到我们的服务注册中心：
 
+![image-20200725175127742](pic/image-20200725175127742.png)
 
+访问：http://localhost/consumer/getServerPort
+
+返回的结果：`return from the provider,port is 8001`
+
+我们的服务的提供者、服务的消费者以及服务的注册中心配置完毕。
+
+> 整体的代码地址：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/1.0.0
 
 ### 二、Consul 服务注册中心
 
