--- a/docs/spring-cloud/服务调用.md
+++ b/docs/spring-cloud/服务调用.md
@@ -1,4 +1,4 @@
-## 简介
+### 简介
 
 > 在https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/1.0.0 这个版本中，服务消费者的代码请求地址直接写在了项目里面了：
 
@@ -144,11 +144,19 @@ public class ApplicationContextConfig {
 
 > 我们发现采用的轮询的方式分别进行调用我们的服务提供者。
 
-项目代码小结：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/2.0.0
+**项目代码小结：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/2.0.0**
 
 ### 二、openfeign 远程服务调用
 
+> 后起之秀肯定有他的优点，openfeign的底层也是用ribbon来实现的。
+>
+> 通过刚刚的编码，我们或多或少感觉到，编码还是不太顺滑鱼简单，而且步骤很复杂，我们能不能用以往的service调用呢，答案是肯定的，我们可以利用openfeign。
+>
 > openfeign 与feign实质上差不多是一样的，都是客户端的调用。
+
+> `所有的远程调用均是在服务的消费端进行调用的。`
+
+#### 1.**在我们的项目中，引入关于openfeign的依赖**
 
 ```xml
 <!--  spring-cloud-starter-openfeign  -->
@@ -157,4 +165,83 @@ public class ApplicationContextConfig {
    <artifactId>spring-cloud-starter-openfeign</artifactId>
 </dependency>
 ```
+
+修改我们的代码结构：
+
+#### 2. 修改主启动类
+
+> 在我们的服务消费侧进行修改
+
+```java
+/**
+ * @author :breakpoint/赵立刚
+ * @date : 2020/07/25
+ */
+@EnableFeignClients // 加上这个
+@SpringBootApplication
+@EnableDiscoveryClient
+public class EurekaClientConsumer80 {
+
+    public static void main(String[] args) {
+        SpringApplication.run(EurekaClientConsumer80.class, args);
+    }
+
+}
+```
+
+#### 3. 修改我们的业务逻辑代码
+
+```java
+/**
+ * @author :breakpoint/赵立刚
+ * @date : 2020/07/26
+ */
+@FeignClient(value = "CLOUD-EUREKA-CLIENT-PROVIDER") //服务的名字
+public interface RemoteProviderService {
+
+    // 远程服务的接口
+    @GetMapping("/getServerPort")
+    public String getServerPort();
+}
+```
+
+#### 4. 修改我们的接口
+
+```java
+/**
+ * @author :breakpoint/赵立刚
+ * @date : 2020/07/25
+ */
+@RestController
+public class EurekaFeignController {
+
+  	// 注入我们刚才新建立的服务
+    @Autowired
+    private RemoteProviderService remoteProviderService;
+
+    @GetMapping("/consumer/feign/getServerPort")
+    public String getServerPort() {
+        return remoteProviderService.getServerPort();
+    }
+
+}
+```
+
+#### 5.整体的项目结构
+
+![image-20200726075504034](pic/image-20200726075504034.png)
+
+#### 6.运行测试
+
+测试结果是正确的。
+
+> 这样，完成了openfeign的调用工作。
+
+代码地址：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/3.0.0
+
+----
+
+
+
+**{docsify-updated}** 
 
