zookeeper的服务注册与发现

--- a/docs/spring-cloud/服务注册中心.md
+++ b/docs/spring-cloud/服务注册中心.md
@@ -367,15 +367,284 @@ public class EurekaProviderController {
 
 ### 二、Consul 服务注册中心
 
-> 待续
+> Spring Cloud Consul。
+>
+> 官网：https://www.consul.io/
+>
+> Consul is a distributed, highly available, and data center aware solution to connect and configure applications across dynamic, distributed infrastructure.
+>
+> Consul 是一个`分布式的`、`高可用性的`、`支持数据中心`的解决方案，用于跨动态的、分布式的基础设施连接和配置应用程序。
+>
+> Consul 提供几个关键功能:
+>
+> 多数据中心-Consul 被构建为数据中心感知，可以支持任何数量的区域，而不需要复杂的配置。
+>
+> 服务网格/服务分段——Consul 连接通过自动TLS加密和基于身份的授权实现服务对服务的安全通信。应用程序可以在服务网格配置中使用sidecar代理来为入站和出站连接建立TLS连接，而根本不知道连接。
+>
+> 服务发现——Consul 使得服务注册自己和通过DNS或HTTP接口发现其他服务变得简单。外部服务(如SaaS提供者)也可以注册。
+>
+> 运行状况检查——运行状况检查使领事能够就集群中的任何问题迅速向操作员发出警报。与服务发现的集成可以防止将流量路由到不健康的主机，并启用服务级别断路器。
+>
+> 键/值存储- 一个灵活的键/值存储可以存储动态配置，功能标记，协调，领导人选举和更多。简单的HTTP API使它易于在任何地方使用。
 
+#### 2.1 下载并安装consul
 
+> 下载地址：https://github.com/hashicorp/consul/releases
+
+我下载的是：consul_1.8.0_linux_amd64.zip 这个版本
+
+**安装：**
+
+![image-20200726083049121](pic/image-20200726083049121.png)
+
+```shell
+开发模式的运行，用于测试的操作：./consul agent -dev -client 0.0.0.0
+```
+
+访问：http://IP:8500/
+
+![image-20200726083409820](pic/image-20200726083409820.png)
+
+看到上面的结果，说明我们的consul安装成功啦！！！
+
+#### 2.2 配置项目
+
+> 实质上，consul我们应用的是服务的注册中心，所以，我们采用consul作为注册中心的时候，eureka的服务注册中心可以放到一边啦。
+
+**配置8001、80项目** 
+
+##### 1 配置pom.xml配置
+
+```xml
+<!--   consul-discovery  -->
+<dependency>
+   <groupId>org.springframework.cloud</groupId>
+   <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+</dependency>
+```
+
+​	去掉或者注释：
+
+```
+spring-cloud-starter-netflix-eureka-client
+```
+
+80:yaml
+
+```yaml
+server:
+  port: 80
+spring:
+  application:
+    name: cloud-eureka-client-consumer
+  cloud:
+    # consul 的相关配置
+    consul:
+      host: 192.168.31.66
+      port: 8500
+#eureka:
+#  instance:
+#    instance-id: ${spring.application.name}:${server.port}
+#    prefer-ip-address: true
+#  client:
+#    service-url:
+#      defaultZone: http://peer1:7001/eureka/,http://peer2:7002/eureka/ # 服务的注册中心 高可用的模式
+#    register-with-eureka: true
+#    fetch-registry: true
+```
+
+8001:yaml
+
+```yaml
+server:
+  port: 8001 # 配置端口号
+#eureka:
+#  client:
+#    register-with-eureka: true # 是否向注册中心注册自己
+#    fetch-registry: true # 是否拉去相关配置信息
+#    service-url:
+#      defaultZone: http://peer1:7001/eureka/,http://peer2:7002/eureka/  # 服务的注册中心 高可用的模式
+#  instance:
+#    prefer-ip-address: true # 是否展示真实的自己的IP
+#    instance-id: ${spring.application.name}:${server.port} # 自己服务的实例的名称
+spring:
+  application:
+    name: cloud-eureka-client-provider # 服务的名称
+  cloud:
+      # consul 的相关配置
+    consul:
+      host: 192.168.31.66
+      port: 8500
+```
+
+##### 2. 启动测试
+
+![image-20200726085343486](pic/image-20200726085343486.png)
+
+根据上面，我们的服务成功的注册到我们的consul的服务注册中心。
+
+![image-20200726090214663](pic/image-20200726090214663.png)
+
+最后通过接口测试：
+
+发现服务还是可以调用的，通过openfeign;
+
+代码总结：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/4.0.0
+
+> 推论：有了其他的注册中心，就不需要我们自己维护一个注册中心了（比如：eureka服务注册中心）。
+>
+> 让我们更加的专注业务逻辑代码的开发。
 
 ### 三、ZooKeeper 服务注册中心
 
-> 待续
+> ZooKeeper是一个[分布式](https://baike.baidu.com/item/分布式/19276232)的，开放源码的[分布式应用程序](https://baike.baidu.com/item/分布式应用程序/9854429)协调服务，是[Google](https://baike.baidu.com/item/Google)的Chubby一个[开源](https://baike.baidu.com/item/开源/246339)的实现，是Hadoop和Hbase的重要组件。它是一个为分布式应用提供一致性服务的软件，提供的功能包括：配置维护、域名服务、分布式同步、组服务等。
+>
+> ZooKeeper的目标就是封装好复杂易出错的关键服务，将简单易用的接口和性能高效、功能稳定的系统提供给用户。
+>
+> ZooKeeper包含一个简单的原语集，提供Java和C的接口。
+>
+> ZooKeeper代码版本中，提供了分布式独享锁、选举、队列的接口，代码在$zookeeper_home\src\recipes。其中分布锁和队列有[Java](https://baike.baidu.com/item/Java/85979)和C两个版本，选举只有Java版本。
+>
+> 由于Zookeeper的性质与特点，我们很容易就应当想到，zookeeper是可以做服务的注册以及配置中心的。
+
+官网详解：
+
+> ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services. All of these kinds of services are used in some form or another by distributed applications. Each time they are implemented there is a lot of work that goes into fixing the bugs and race conditions that are inevitable. Because of the difficulty of implementing these kinds of services, applications initially usually skimp on them, which make them brittle in the presence of change and difficult to manage. Even when done correctly, different implementations of these services lead to management complexity when the applications are deployed.
+>
+> ZooKeeper是一个`集中的服务`，用于`维护配置信息`、`命名`、提供`分布式同步`和提供`组服务`。所有这些类型的服务都被分布式应用程序以某种形式使用。每次实现它们时，都要做大量工作来修复不可避免的bug和竞争条件。由于实现这些类型的服务很困难，应用程序最初通常忽略它们，这使得它们在出现更改时很脆弱，难以管理。即使正确执行，这些服务的不同实现也会在部署应用程序时导致管理复杂性。
+
+**前提条件：具有zookeeper的安装环境**
+
+![image-20200726135034454](pic/image-20200726135034454.png)
+
+启动并且配置zookeeper：
+
+![image-20200726135145535](pic/image-20200726135145535.png)
+
+之后链接我们的客户端：
+
+![image-20200726135250555](pic/image-20200726135250555.png)
+
+> 至此,zoopkeeper的整体性的环境搭建完毕。
+
+#### 3.1 修改我们的项目
+
+**修改pom.xml文件：**
+
+> 首先注释掉其他的服务注册中心的依赖。
+
+8001:
+
+```xml
+	<!--  zookeeper 的服务发现   -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.zookeeper</groupId>
+                    <artifactId>zookeeper</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!--   根据自己的版本进行引入 之后看自己的 zookeeper 是多少 -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.14</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+```
+
+80:
+
+引入的相同。
+
+#### 3.2 修改配置文件
+
+80:
+
+```yaml
+server:
+  port: 80
+spring:
+  application:
+    name: cloud-eureka-client-consumer
+  cloud:
+    # 配置zookeeper 的地址
+    zookeeper:
+      connect-string: 192.168.31.66:2181
+```
+
+8001:
+
+```yaml
+server:
+  port: 8001 # 配置端口号
+#eureka:
+#  client:
+#    register-with-eureka: true # 是否向注册中心注册自己
+#    fetch-registry: true # 是否拉去相关配置信息
+#    service-url:
+#      defaultZone: http://peer1:7001/eureka/,http://peer2:7002/eureka/  # 服务的注册中心 高可用的模式
+#  instance:
+#    prefer-ip-address: true # 是否展示真实的自己的IP
+#    instance-id: ${spring.application.name}:${server.port} # 自己服务的实例的名称
+spring:
+  application:
+    name: cloud-eureka-client-provider # 服务的名称
+  cloud:
+    # 配置zookeeper 的地址
+    zookeeper:
+      connect-string: 192.168.31.66:2181
+      # consul 的相关配置
+#    consul:
+#      host: 192.168.31.66
+#      port: 8500
+```
+
+#### 3.3 启动测试以及运行结果
+
+**分别启动服务的提供者以及服务的消费者**
+
+登陆服务器，查看结果：
+
+![image-20200726140251450](pic/image-20200726140251450.png)
+
+> 我们发现，我们自己定义的服务已经注册到zookeeper上了。查看一下具体的信息。
+>
+> 比如查看服务的提供者：
+
+![image-20200726140508833](pic/image-20200726140508833.png)
+
+根据返回的结果，我们看到了，我们的服务已经注册到了zookeeeper,而且相关的信息，我们也会查询的到。
+
+**接口调用测试：** 
+
+![image-20200726140838365](pic/image-20200726140838365.png)
+
+成功调用，返回正确的结果信息。
+
+> `需要注意的问题是：zookeeper的服务注册中心的注册信息，并不是持久化的，结束我们的服务，相应的信息会立即消失的。`
+>
+> ![image-20200726141107921](pic/image-20200726141107921.png)
+>
+> 代码小结：
 
 ### 四、nacos服务注册中心
 
-> 待续
+> 详情请见spring-cloud-alibaba的部分！！！
+
+---
+
+**{docsify-updated}** 
 
