--- a/docs/spring-cloud/服务降级.md
+++ b/docs/spring-cloud/服务降级.md
@@ -323,6 +323,8 @@ public class EurekaProviderController {
 
 测试成功。
 
+> 代码小结：https://github.com/zhaoligang594/spring-cloud-learn/releases/tag/6.0.0
+
 ### 二、阿里巴巴 Sentinel
 
 > 详细的介绍，请看Spring Cloud Alibaba的部分。
